Reservation and charging session update